// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFromHtml#parseToFragment does not render react-reserved attributes 1`] = `<div />`;

exports[`ReactFromHtml#parseToFragment renders <input/> with defaultValue 1`] = `
<input
  defaultValue="foo"
  disabled={true}
  size={10}
  type="text"
/>
`;

exports[`ReactFromHtml#parseToFragment renders <script/> with dangerouslySetInnerHTML 1`] = `
<script
  dangerouslySetInnerHTML={
    Object {
      "__html": "console.log('Hello <strong>React</strong> world!');",
    }
  }
/>
`;

exports[`ReactFromHtml#parseToFragment renders <style/> with dangerouslySetInnerHTML 1`] = `
<style
  dangerouslySetInnerHTML={
    Object {
      "__html": "/* Hello <strong>React</strong> world! */",
    }
  }
/>
`;

exports[`ReactFromHtml#parseToFragment renders <textarea/> with defaultValue, instead of children 1`] = `
<textarea
  defaultValue="/* Hello <strong>React</strong> world! */"
/>
`;

exports[`ReactFromHtml#parseToFragment renders elements with the style attribute 1`] = `
<label
  style={
    Object {
      "color": "red",
      "fontSize": "20px",
      "fontWeight": "normal",
      "opacity": 0.5,
      "zIndex": 99,
    }
  }
>
  Hello, world!
</label>
`;

exports[`ReactFromHtml#parseToFragment renders for as htmlFor 1`] = `
<label
  htmlFor="foo"
>
  <input
    id="foo"
  />
</label>
`;

exports[`ReactFromHtml#parseToFragment renders multiple blocks of HTML elements correctly 1`] = `
Array [
  "
          ",
  <p>
    Hello, 
    <strong>
      React
    </strong>
     world!
  </p>,
  "
          ",
  <p>
    Hello, 
    <strong>
      React
    </strong>
     world!
  </p>,
  "
          ",
  <p>
    Hello, 
    <strong>
      React
    </strong>
     world!
  </p>,
  "
        ",
]
`;

exports[`ReactFromHtml#parseToFragment renders single block of HTML elements correctly 1`] = `
<p
  className="hello"
>
  Hello, 
  <strong>
    React
  </strong>
   world!
</p>
`;
